<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sort"
        android:title="@string/action_sort"
        android:icon="@drawable/ic_sort"
        app:showAsAction="ifRoom">

        <menu>

            <group
                android:id="@+id/sort_group"
                android:checkableBehavior="single">

                <item
                    android:id="@+id/sort_most_popular"
                    android:title="@string/sort_most_popular"
                    app:showAsAction="never"/>

                <item
                    android:id="@+id/sort_top_rated"
                    android:title="@string/sort_top_rated"
                    app:showAsAction="never"/>

            </group>
        </menu>
    </item>

</menu>