<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/errorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <TextView
            android:id="@+id/errorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_8dp"
            android:layout_marginLeft="@dimen/dimens_8dp"
            android:layout_marginEnd="@dimen/dimens_8dp"
            android:layout_marginRight="@dimen/dimens_8dp"
            android:gravity="center"
            android:padding="@dimen/dimens_16dp"
            android:textAppearance="?android:textAppearanceMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/errorImage"
            tools:drawableTop="@drawable/ic_cloud_off"
            tools:text="@string/no_internet_connection" />

        <ImageView
            android:id="@+id/errorImage"
            android:layout_width="@dimen/dimens_200dp"
            android:layout_height="@dimen/dimens_200dp"
            android:layout_marginStart="@dimen/dimens_8dp"
            android:layout_marginLeft="@dimen/dimens_8dp"
            android:layout_marginTop="@dimen/dimens_8dp"
            android:layout_marginEnd="@dimen/dimens_8dp"
            android:layout_marginRight="@dimen/dimens_8dp"
            android:contentDescription="@string/no_description_available"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            tools:src="@tools:sample/avatars" />

        <Button
            android:id="@+id/errorButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_8dp"
            android:layout_marginLeft="@dimen/dimens_8dp"
            android:layout_marginTop="@dimen/dimens_8dp"
            android:layout_marginEnd="@dimen/dimens_8dp"
            android:layout_marginRight="@dimen/dimens_8dp"
            android:background="@android:color/transparent"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/errorText"
            tools:text="@string/error_try_again" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>